--- a/gdx-pe-loader/build.gradle
+++ b/gdx-pe-loader/build.gradle
@@ -32,7 +32,7 @@ signing {
 
 
 group = "com.codeandweb.physicseditor"
-version = "1.1.0-SNAPSHOT"
+version = "1.1.0"
 archivesBaseName = "gdx-pe-loader"
 
 
